[package]
name = "munkres"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
hungarian = "1.1.1"
pathfinding = "=4.3.1"
chrono = "0.4.38"
strum = { version = "0.26", features = ["derive"] }
lapjv="0.2.1"
ndarray = "0.13"

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[profile.release]
opt-level = 3